# anatomy

./: .gitignore  .gitmodules  README.md  anatomy.cabal  anatomy.lock-7.10.2  boris-git.toml  boris.toml  mafia  master.toml
doc/: anatomy-ci.md
main/: ci.hs
src/: Anatomy.hs
src/Anatomy/: Data.hs  Main.hs
src/Anatomy/Ci/: GitHub.hs  Jenkins.hs
src/Anatomy/System/: Report.hs  Sync.hs  XmlDiff.hs
templates/: branches-watch.xml  branches.xml  devel.xml  job.xml  notrigger.xml
test/: test.hs
test/Test/Anatomy/System/: XmlDiff.hs
