name:                  ambiata-anatomy
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              anatomy
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           anatomy.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-x-optparse
                     , async                           == 2.0.*
                     , bifunctors                      == 4.2.*
                     , bytestring                      == 0.10.*
                     , connection                      == 0.2.*
                     , containers
                     , either                          == 4.3.*
                     , filepath                        == 1.3.*
                     , github
                     , Glob
                     , http-client                     == 0.3.*
                     , http-client-tls                 == 0.2.*
                     , http-types                      == 0.8.*
                     , optparse-applicative            == 0.11.*
                     , process                         == 1.2.*
                     , text                            == 1.2.*
                     , template                        == 0.2.*
                     , template-haskell
                     , temporary                       == 1.2.*
                     , time                            == 1.4.*
                     , transformers                    == 0.3.*
                     , unix                            == 2.7.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src
                       gen


  exposed-modules:
                       BuildInfo_ambiata_anatomy
                       Paths_ambiata_anatomy
                       Anatomy
                       Anatomy.Ci.Jenkins
                       Anatomy.Ci.GitHub
                       Anatomy.Data
                       Anatomy.Main
                       Anatomy.System.Report
                       Anatomy.System.Sync

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-anatomy
                     , ambiata-disorder-core
                     , ambiata-p
                     , text
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
